tests/solidity-semantic-tests/out/errors/error_static_calldata_uint_array_and_dynamic_array/C.clear.teal
#pragma version 12
#pragma typetrack false

// /home/argi/AlgorandFoundation/polymarket-experiment/puya-sol/tests/solidity-semantic-tests/tests/errors/error_static_calldata_uint_array_and_dynamic_array.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
